--- a/0728/object.ipynb
+++ b/0728/object.ipynb
@@ -944,7 +944,7 @@
    "cell_type": "markdown",
    "source": [
     "## 클래스(class)와 인스턴스(instance)\r\n",
-    "- 클래스를 정의하고, 인스턴스들을 만들어 활용함\r\n",
+    "- 클래스를 정의하고, 인스턴스들을 만들어 활용한다.\r\n",
     "  - 클래스 : 객체들의 분류(class)\r\n",
     "  - 인스턴스 : 하나하나의 실체/예(instance)"
    ],
@@ -1193,7 +1193,8 @@
    "cell_type": "markdown",
    "source": [
     "## 생성자(constructor)\r\n",
-    "- 인스턴스 객체가 생성될 때 호출되는 메서드"
+    "- 인스턴스 객체가 생성될 때 호출되는 메서드\r\n",
+    "- 반드시 `__init__`이라는 이름으로 정의"
    ],
    "metadata": {}
   },
@@ -1227,18 +1228,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 3,
    "source": [
     "class Person:\r\n",
     "    def __init__(self, name):\r\n",
-    "        print(f'인스턴스가 생성되었습니다. {name}')"
+    "        print(f'{name}, 인스턴스가 생성되었습니다.')"
    ],
    "outputs": [],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 4,
    "source": [
     "person1 = Person('태현')"
    ],
@@ -1247,7 +1248,7 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "인스턴스가 생성되었습니다. 태현\n"
+      "태현, 인스턴스가 생성되었습니다.\n"
      ]
     }
    ],
@@ -1257,7 +1258,8 @@
    "cell_type": "markdown",
    "source": [
     "## 소멸자(destructor)\r\n",
-    "- 인스턴스 객체가 소멸(파괴)되기 직전에 호출되는 메서드"
+    "- 인스턴스 객체가 소멸(파괴)되기 직전에 호출되는 메서드\r\n",
+    "- 반드시 `__del__`이라는 이름으로 정의"
    ],
    "metadata": {}
   },
@@ -1285,6 +1287,46 @@
      "name": "stdout",
      "text": [
       "인스턴스가 사라졌습니다.\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "source": [
+    "class Snow:\r\n",
+    "    def __init__(self):\r\n",
+    "        print('Do you want a build a snowman?')\r\n",
+    "\r\n",
+    "    def __del__(self):\r\n",
+    "        print('okay bye~')"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "s1 = Snow()"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "source": [
+    "s1 = 1"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "okay bye~\n"
      ]
     }
    ],
@@ -1369,6 +1411,62 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
+      "True\n",
+      "False\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## 매직 메서드 실습\r\n",
+    "\r\n",
+    "> 매직메서드를 활용하여 인스턴스간의 비교연산(`>`, `==`)이 가능하도록 매직메서드를 정의\r\n",
+    ">\r\n",
+    "> `Person` 클래스를 정의. 인스턴스 속성은 `name` 과 `age`를 가지며, 인스턴스간 `age` 비교가 가능해야한다.\r\n",
+    ">\r\n",
+    "> `__gt__`메서드와 `__eq__`메서드를 활용"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "source": [
+    "class Person:\r\n",
+    "    def __init__(self, name, age):\r\n",
+    "        self.name = name\r\n",
+    "        self.age = age\r\n",
+    "\r\n",
+    "    def __gt__(self, other):\r\n",
+    "        return self.age > other.age\r\n",
+    "\r\n",
+    "    def __eq__(self, other):\r\n",
+    "        return self.age == other.age"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "source": [
+    "p1 = Person('김', 1)\r\n",
+    "p2 = Person('이', 2)\r\n",
+    "p3 = Person('박', 1)\r\n",
+    "\r\n",
+    "print(p1 > p2)\r\n",
+    "print(p1 == p3)\r\n",
+    "print(p1 == p2)"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "False\n",
       "True\n",
       "False\n"
      ]
