--- a/0726/list.ipynb
+++ b/0726/list.ipynb
@@ -477,10 +477,58 @@
    "metadata": {}
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 1,
    "source": [
-    "()\r\n",
-    "print(numbers, result)"
+    "# == 과 is의 차이\r\n",
+    "# ==은 값이 같은지를 비교, is는 객체가 같은지를 비교\r\n",
+    "a = [1, 2, 3]\r\n",
+    "b = a\r\n",
+    "c = [1, 2, 3]\r\n",
+    "\r\n",
+    "print(a==b)     # True\r\n",
+    "print(a==c)     # True\r\n",
+    "\r\n",
+    "print(a is b)   # True\r\n",
+    "print(a is c)   # False"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "True\n",
+      "True\n",
+      "True\n",
+      "False\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "source": [
+    "arr = [1, 2, 3]\r\n",
+    "\r\n",
+    "# 얕은 복사\r\n",
+    "a = arr[:]\r\n",
+    "b = list(arr)\r\n",
+    "\r\n",
+    "a[0] = 5\r\n",
+    "b[0] = 6\r\n",
+    "\r\n",
+    "print(arr)"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[1, 2, 3]\n"
+     ]
+    }
    ],
    "metadata": {}
   },
