--- a/0729/function_practice.ipynb
+++ b/0729/function_practice.ipynb
@@ -345,6 +345,43 @@
    "cell_type": "code",
    "execution_count": 13,
    "source": [
+    "def dict_invert2(my_dict):\r\n",
+    "    invert_dict = {}\r\n",
+    "    for key, value in my_dict.items():\r\n",
+    "        if value not in invert_dict:\r\n",
+    "            invert_dict[value] = [key]\r\n",
+    "        else:\r\n",
+    "            invert_dict[value].append(key)\r\n",
+    "    return invert_dict"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "source": [
+    "print(dict_invert2({1: 10, 2: 20, 3: 30}))           # {10: [1], 20: [2], 30: [3]}\r\n",
+    "print(dict_invert2({1: 10, 2: 20, 3: 30, 4: 30}))    # {10: [1], 20: [2], 30: [3, 4]}\r\n",
+    "print(dict_invert2({1: True, 2: True, 3: True}))     # {True: [1, 2, 3]}"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "{10: [1], 20: [2], 30: [3]}\n",
+      "{10: [1], 20: [2], 30: [3, 4]}\n",
+      "{True: [1, 2, 3]}\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "source": [
     "# fail[1]\r\n",
     "def dict_invert(my_dict):\r\n",
     "    return {value:[key] for key, value in my_dict.items()}"
@@ -354,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "source": [
     "print(dict_invert({1: 10, 2: 20, 3: 30}))\r\n",
     "print(dict_invert({1: 10, 2: 20, 3: 30, 4: 30}))\r\n",
