--- a/0729/opp_practice2.ipynb
+++ b/0729/opp_practice2.ipynb
@@ -25,6 +25,47 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "class ClassHelper:\r\n",
+    "    def __init__(self, students):\r\n",
+    "        self.students = students\r\n",
+    "\r\n",
+    "    def pick(self, num):\r\n",
+    "        import random\r\n",
+    "        return random.sample(self.students, num)\r\n",
+    "\r\n",
+    "    def match_pair(self):\r\n",
+    "        import random\r\n",
+    "        pair_list = []\r\n",
+    "        random_student = random.sample(self.students, len(self.students))\r\n",
+    "        while len(random_student) > 3:\r\n",
+    "            pair_list.append([random_student.pop(), random_student.pop()])\r\n",
+    "        pair_list.append(random_student)\r\n",
+    "        return pair_list"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "ch = ClassHelper(['김씨', '이씨', '조씨', '박씨', '정씨'])\r\n",
+    "\r\n",
+    "print(ch.pick(1))\r\n",
+    "print(ch.pick(1))\r\n",
+    "print(ch.pick(2))\r\n",
+    "print(ch.pick(3))\r\n",
+    "print(ch.pick(4))\r\n",
+    "\r\n",
+    "ch.match_pair()"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "source": [
     "import random\r\n",
